--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,26 @@
-spring.application.name=Portfolio Application
+#spring.application.name=Portfolio Application
+#
+## MySQL Configuration
+#spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_db
+#spring.datasource.username=root
+#spring.datasource.password=MySQL@2025
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## JPA/Hibernate Configuration
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#
+## Show SQL Queries
+#spring.jpa.show-sql=true
+#
+#spring.sql.init.mode=always
+#
 
-# MySQL Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_db
-spring.datasource.username=root
-spring.datasource.password=MySQL@2025
+spring.datasource.url=jdbc:mysql://blonze2d5mrbmcgf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u5n98etwhdkuhajh?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=wcq3ibvoyc8cio4f
+spring.datasource.password=ntn00rvx6a32x9aj
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate Configuration
+# JPA & Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
-# Show SQL Queries
-spring.jpa.show-sql=true
-
-spring.sql.init.mode=always
-
