--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,1 @@
-#spring.application.name=Portfolio Application
-#
-## MySQL Configuration
-#spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_db
-#spring.datasource.username=root
-#spring.datasource.password=MySQL@2025
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-## JPA/Hibernate Configuration
-#spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-#
-## Show SQL Queries
-#spring.jpa.show-sql=true
-#
-#spring.sql.init.mode=always
-#
-
-spring.datasource.url=jdbc:mysql://blonze2d5mrbmcgf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u5n98etwhdkuhajh?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=wcq3ibvoyc8cio4f
-spring.datasource.password=ntn00rvx6a32x9aj
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA & Hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-spring.datasource.hikari.maximum-pool-size=5
-spring.datasource.hikari.minimum-idle=2
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-server.port=${PORT:8080}
+spring.profiles.active=local
