--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,4 +13,8 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 server.port=${PORT:8080}
 
+logging.level.org.springframework.jdbc.datasource=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
+
 #frontend.url=https://carlos-portfolio-orcin.vercel.app
