--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://carlos-world-6b9abbd54441.herokuapp.com/
+VITE_API_BASE_URL=https://carlos-world-6b9abbd54441.herokuapp.com
