--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:mysql://blonze2d5mrbmcgf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u5n98etwhdkuhajh?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=wcq3ibvoyc8cio4f
-spring.datasource.password=ntn00rvx6a32x9aj
+#spring.datasource.url=jdbc:mysql://blonze2d5mrbmcgf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u5n98etwhdkuhajh?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://a8irjnf5mulsdj2i:fq997ih26od25lot@gzp0u91edhmxszwf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/jslbq00ln691crpk?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=a8irjnf5mulsdj2i
+spring.datasource.password=fq997ih26od25lot
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA & Hibernate
