--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 #spring.datasource.url=jdbc:mysql://blonze2d5mrbmcgf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/u5n98etwhdkuhajh?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://a8irjnf5mulsdj2i:fq997ih26od25lot@gzp0u91edhmxszwf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/jslbq00ln691crpk?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=a8irjnf5mulsdj2i
-spring.datasource.password=fq997ih26od25lot
+spring.datasource.url=jdbc:mysql://lbjckmomut1ou7rm:f1v3lc9qpvonu9of@gzp0u91edhmxszwf.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qmgo9utilpxvp2jy?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=	lbjckmomut1ou7rm
+spring.datasource.password=f1v3lc9qpvonu9of
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA & Hibernate
